--- a/wiki/ComponentConcepts.wiki
+++ b/wiki/ComponentConcepts.wiki
@@ -89,6 +89,7 @@ A model must be able to receive events.  Events could be anything, but only the 
 
 As far as a component is aware, it always has the screen position (0,0).  Its size changes, however.  A component also knows how large it wants to be.
 
+  * `extent get_size() const;`
   * `void set_size(extent const &);`
   * `extent get_preferred_size() const;`
 
